--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/mongoose": "^5.5.17",
     "axios": "^0.19.0",
     "mongoose": "^5.7.0",
+    "nestjs-config": "^1.4.4",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.12",
     "request": "^2.88.0",
